tests/ui/deriving/issue-105101.stderr
error: multiple declared defaults
  --> $DIR/issue-105101.rs:3:10
   |
LL | #[derive(Default)]
   |          ^^^^^^^ in this derive macro expansion
...
LL |     A,
   |     - first default
LL |     #[default]
LL |     A,
   |     - additional default
  --> $SRC_DIR/core/src/default.rs:LL:COL
   |
   = note: in this expansion of `#[derive(Default)]`
   |
   = note: only one variant can be default

error[E0428]: the name `A` is defined multiple times
  --> $DIR/issue-105101.rs:8:5
   |
LL |     A,
   |     - previous definition of the type `A` here
LL |     #[default]
LL |     A,
   |     ^ `A` redefined here
   |
   = note: `A` must be defined only once in the type namespace of this enum

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0428`.
